Fix tr-icons -> tricons (might break on css minification otherwise)

--- a/modules/core/client/less/icons.less
+++ b/modules/core/client/less/icons.less
@@ -10,16 +10,16 @@
  */
 
 // Cache buster
-@icon-version: "2015-05-27";
+@icon-version: "2015-06-02";
 @icon-li-width: (30em / 14);
 
 @font-face {
-  font-family: 'tr-icons';
-  src: url('/lib/fontello/fonts/tr-icons.eot?v=@{icon-version}');
-  src: url('/lib/fontello/fonts/tr-icons.eot?v=@{icon-version}#iefix') format('embedded-opentype'),
-       url('/lib/fontello/fonts/tr-icons.woff?v=@{icon-version}') format('woff'),
-       url('/lib/fontello/fonts/tr-icons.ttf?v=@{icon-version}') format('truetype'),
-       url('/lib/fontello/fonts/tr-icons.svg?v=@{icon-version}#tr-icons') format('svg');
+  font-family: 'tricons';
+  src: url('/lib/fontello/fonts/tricons.eot?v=@{icon-version}');
+  src: url('/lib/fontello/fonts/tricons.eot?v=@{icon-version}#iefix') format('embedded-opentype'),
+       url('/lib/fontello/fonts/tricons.woff?v=@{icon-version}') format('woff'),
+       url('/lib/fontello/fonts/tricons.ttf?v=@{icon-version}') format('truetype'),
+       url('/lib/fontello/fonts/tricons.svg?v=@{icon-version}#tricons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -28,8 +28,8 @@
 /*
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
-    font-family: 'tr-icons';
-    src: url('/lib/fontello/font/tr-icons.svg#tr-icons') format('svg');
+    font-family: 'tricons';
+    src: url('/lib/fontello/font/tricons.svg#tricons') format('svg');
   }
 }
 */
@@ -42,7 +42,7 @@
 
 // Original Fontello CSS
 [class^="icon-"]:before, [class*=" icon-"]:before {
-  font-family: "tr-icons";
+  font-family: "tricons";
   font-style: normal;
   font-weight: normal;
   speak: none;
